tests/specs/run/check_js_points_to_ts/check_js_points_to_ts/test.js.out
TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
  return 42;
  ~~~~~~
    at [WILDCARD]

error: Type checking failed.

  info: The program failed type-checking, but it still might work correctly.
  hint: Re-run with --no-check to skip type-checking.
